Save player & manage inventory

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,10 @@
     <div class="container">
       <h1>Initialisation du jeu</h1>
       <p>
-          Si vous souhaitez lancer une nouvelle partie, veuillez <a href="./init?random=1">cliquer ici</a>.
-          Sinon, merci de compléter les informations concernant votre personnage dans le formulaire ci-dessous.
+        Si vous souhaitez lancer une nouvelle partie, veuillez <a href="./init?random=1">cliquer ici</a>.
+      </p>
+      <p>
+        Vous pouver aussi compléter les informations concernant votre personnage dans le formulaire ci-dessous.
       </p>
       <form method="GET" action="./init">
         <div class="row">
@@ -52,6 +54,9 @@
           </div>
         </div>
       </form>
+      <p class="mt-3">
+        Il est également possible de <a href="./load">charger votre personnage depuis la dernière sauvegarde</a> (si elle existe)
+      </p>
     </div>
   </body>
 </html>
