--- a/templates/fightChance.html
+++ b/templates/fightChance.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Fight Chance</title>
+    <title>Un livre dont vous êtes le HÉROS</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
