--- a/templates/play.html
+++ b/templates/play.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Player</title>
+    <title>Un livre dont vous êtes le HÉROS</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -140,6 +140,15 @@
                 </button>
               </div>
             </form>
+          </div>
+          <div class="row">
+            <a href="./tryChance" class="text-center mt-3">
+              <button
+                  style="height: 75px; width: 150px;"
+                  class="col-3 bg-success text-white rounded-pill">
+                  Tenter votre chance
+                </button>
+            </a>
           </div>
         </div>
       </div>
